Began setting up equipment types removed left/right hand for one hand

--- a/Echoes/Items.plist
+++ b/Echoes/Items.plist
@@ -19,8 +19,7 @@
 		</array>
 		<key>itemSlots</key>
 		<array>
-			<string>lefthand</string>
-			<string>righthand</string>
+			<string>onehand</string>
 		</array>
 	</dict>
 	<dict>
@@ -40,8 +39,7 @@
 		</array>
 		<key>itemSlots</key>
 		<array>
-			<string>lefthand</string>
-			<string>righthand</string>
+			<string>onehand</string>
 		</array>
 	</dict>
 </array>
