--- a/Echoes/Items.plist
+++ b/Echoes/Items.plist
@@ -106,6 +106,7 @@
 		<key>attributeRequirements</key>
 		<array>
 			<string>STR 2</string>
+			<string>FAI 0</string>
 		</array>
 		<key>itemSlot</key>
 		<string>boots</string>
