--- a/Echoes/Items.plist
+++ b/Echoes/Items.plist
@@ -217,5 +217,41 @@
 		<key>itemSlot</key>
 		<string>spell</string>
 	</dict>
+	<dict>
+		<key>name</key>
+		<string>Spider Shield</string>
+		<key>actionText</key>
+		<string>Block: Raise your shield to prevent 25% of the damage you would receive before your next turn.</string>
+		<key>descriptiveText</key>
+		<string>This shield prevents poison and toxic effects when blocking.</string>
+		<key>flavorText</key>
+		<string>Shield of the savage mountain bandits. Uniquely-shaped with a large black spider etched upon it.</string>
+		<key>imageName</key>
+		<string>spidershield</string>
+		<key>attributeRequirements</key>
+		<array>
+			<string>STR 2</string>
+		</array>
+		<key>itemSlot</key>
+		<string>onehand</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>Shortsword</string>
+		<key>actionText</key>
+		<string>Slash: Swing your sword in an arc dealing 1d6 to up to two enemies in front of you.</string>
+		<key>descriptiveText</key>
+		<string>A quick and efficient sword useful for hit and run tactics.</string>
+		<key>flavorText</key>
+		<string></string>
+		<key>imageName</key>
+		<string>shortsword</string>
+		<key>attributeRequirements</key>
+		<array>
+			<string>STR 1</string>
+		</array>
+		<key>itemSlot</key>
+		<string>onehand</string>
+	</dict>
 </array>
 </plist>
