--- a/Echoes/Items.plist
+++ b/Echoes/Items.plist
@@ -24,11 +24,11 @@
 		<key>name</key>
 		<string>Kite Shield</string>
 		<key>actionText</key>
-		<string>Block: Raise your shield to prevent 50% of the damage you would receive before your next turn.</string>
+		<string>Cover: Raise your shield over an ally standing next to you. They gain the benefits of the shield while they remain near you.</string>
 		<key>descriptiveText</key>
-		<string>Medium metal shield. Decorated with a tower, the symbol of protection.</string>
+		<string>Reduces physical damage received by 2.</string>
 		<key>flavorText</key>
-		<string></string>
+		<string>Medium metal shield. Decorated with a tower, the symbol of protection.</string>
 		<key>imageName</key>
 		<string>kiteshield</string>
 		<key>attributeRequirements</key>
@@ -185,9 +185,9 @@
 		<key>name</key>
 		<string>Heater Shield</string>
 		<key>actionText</key>
-		<string>Block: Raise your shield to prevent 25% of the damage you would receive before your next turn.</string>
+		<string>Cover: Raise your shield over an ally standing next to you. They gain the benefits of the shield while they remain near you.</string>
 		<key>descriptiveText</key>
-		<string>A standard, widely-used shield.</string>
+		<string>Reduces physical damage received by 1.</string>
 		<key>flavorText</key>
 		<string></string>
 		<key>imageName</key>
@@ -221,9 +221,9 @@
 		<key>name</key>
 		<string>Spider Shield</string>
 		<key>actionText</key>
-		<string>Block: Raise your shield to prevent 25% of the damage you would receive before your next turn.</string>
+		<string>Push: Knock an enemy to the ground with your shield. Deals 1d4 damage.</string>
 		<key>descriptiveText</key>
-		<string>This shield prevents poison and toxic effects when blocking.</string>
+		<string>Reduces physical damage received by 1 and prevents poison.</string>
 		<key>flavorText</key>
 		<string>Shield of the savage mountain bandits. Uniquely-shaped with a large black spider etched upon it.</string>
 		<key>imageName</key>
