Updated lore list

--- a/Echoes/Lore.plist
+++ b/Echoes/Lore.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Game Introduction</key>
+	<key>The Forming of the World</key>
 	<string>In the age of Ancients, the world was unformed. Shrouded by fog. A land of gray crags, archtrees and everlasting dragons.
         
 But then there was fire. And with fire, came desparity. Heat... and cold. Life... and death. And of course, light and dark. Then from the dark, they came. And found the souls of lords within the flame.
