Added leaving the asylum lore

--- a/Echoes/Lore.plist
+++ b/Echoes/Lore.plist
@@ -26,6 +26,8 @@ Nito unleashed a miasma of death and disease.
 And Seath the Scaleless betrayed his own, and the dragons were no more.
 
 Thus began the Age of Fire. But soon, the flames will fade, and only dark will remain. Even now, there are only embers, and man sees not light, but only endless nights. And amongst the living are seen, carriers of the accursed darksign.</string>
+	<key>Leaving the Asylum</key>
+	<string>Only, in the ancient legends it is stated...that one day an Undead shall be chosen. to leave the Undead Asylum, in pilgrimage. To the land of the ancient Lords, Lordran.</string>
 	<key>Knight Introduction</key>
 	<string>The sky was gray. Always gray. You walk the walls of the city of Berenike, looking for what you don&apos;t know. This day would be no different than the days prior. As light faded, so did everyone&apos;s ambitions. No wars. No heroic quests. The occasional bandit would come around, but mostly just stealing enough to survive. 
 
